# Argus

./: .dockerignore  .env  .env.example  .gitignore  BIND_MOUNT_README.md  DB_PERSISTENCE.md  Dockerfile  Dockerfile.test  LICENSE  README-QUERIES-FIX.md  README-pgvector-migration.md  README.md  __init__.py  docker-compose.yml  example_usage.py  find-python-imports.sh  hello.py  llm_data.sqlite  make_executable.py  persistence-setup.sh  pyproject.toml  requirements.txt  run_tests.sh  schema.sql  setup-bind-mounts.sh  setup.py  setup.sh  test_benchmarks.py
app/: app.py  direct_api_forwarder.py  dockerfile
argus/: __init__.py  diverse_queries.py  embedding_store.py  example_metrics_usage.py  example_usage.py  llm_metrics.py  llm_query.py  llm_storage.py  setup_grafana.py  storage_viz_example.md  streamlit_dashboard.py
chroma_db/: chroma.sqlite3
evaluation_storage/: README.md  api.py  dockerfile  evaluation_storage.py  migrate_to_postgres.py  pg_evaluation_storage.py  storage_factory.py
examples/: client_example.py  run_evaluation.py  vector_search_example.py
item_storage/: api.py  dockerfile  pg_item_storage.py  storage_factory.py
judge_service/: README.md  api.py  direct_gemini_client.py  dockerfile  judge_storage.py  migrate_to_postgres.py  model_registry_client.py  pg_judge_storage.py  provider_manager.py  service_clients.py  storage_factory.py  test_gemini_client.py
llm_eval/: client.py
metric_results/: metrics_results.csv
migrations/: README  alembic.ini  env.py
model_registry/: api.py  dockerfile  models.py  registry_storage.py  requirements.txt
monitoring/: docker-compose.yml
postgres/: Dockerfile
query_storage/: README.md  api.py  dockerfile  migrate_to_postgres.py  pg_query_storage.py  query_storage.py  storage_factory.py
results/: gsm8k_results_20250310_000015.json  gsm8k_results_20250310_000232.json  gsm8k_results_20250310_092210.json  gsm8k_results_20250311_225126.json  gsm8k_results_20250311_225814.json  gsm8k_results_20250311_230209.json  gsm8k_results_20250311_234244.json  gsm8k_results_20250311_235155.json  gsm8k_results_20250311_235555.json  gsm8k_results_20250312_000758.json  gsm8k_results_20250312_001055.json  gsm8k_results_20250312_001319.json  gsm8k_results_20250312_001634.json  gsm8k_results_20250312_002108.json  gsm8k_results_20250312_002359.json  gsm8k_results_20250312_002645.json  (+41 more)
shared/: db.py  (+4 more)
(+217 files in other folders)
