[project]
name = "llm_eval"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.30.0",
    "chromadb>=0.6.3",
    "fastapi>=0.115.11",
    "litellm>=1.62.4",
    "pandas>=2.2.3",
    "plotly>=6.0.0",
    "pydantic>=2.10.6",
    "requests>=2.32.3",
    "setuptools>=75.8.2",
    "streamlit>=1.43.0",
    "uvicorn>=0.34.0",
]
