[project]
name = "panopticon"
version = "0.1.0"
description = "A microservices system for evaluating language model outputs using customizable metrics"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
dependencies = [
    "fastapi[standard]>=0.115.11",
    "uvicorn[standard]>=0.27.1",
    "litellm>=1.30.3",
    "sqlalchemy>=2.0.27",
    "psycopg2-binary>=2.9.9",
    "pydantic>=2.5.3",
    "alembic>=1.13.1",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.6",
    "aiohttp>=3.8.5",
    "python-json-logger>=2.0.7",
    "asyncpg>=0.28.0",  # For async database operations
    "sentence-transformers>=2.2.2",  # For embedding generation with vector search
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-cov>=4.1.0",
    "black>=23.12.1",
    "isort>=5.12.0",
    "mypy>=1.7.1",
    "ruff>=0.1.8",
    "httpx>=0.25.2",
]

[tool.pytest]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
python_classes = "Test*"
addopts = "--cov=. --cov-report=term-missing"

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.ruff]
line-length = 88
target-version = "py312"
select = ["E", "F", "I", "W"]
ignore = []
